# Shakti

./: MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: test.yml
example/: client.py  echo-server-client.py  file.py  hi.py  open.py  os.py
example/bench/: asyncio_bench.py  python_bench.py  shakti_bench.py
shakti/io/: socket.py
src/shakti/: __init__.py
src/shakti/core/: async.pxd  async.pyx  base.pxd  base.pyx
src/shakti/event/: entry.pxd  entry.pyx  run.pxd  run.pyx  sleep.pxd  sleep.pyx  task.pyx  time.pxd  time.pyx
src/shakti/io/: common.pxd  common.pyx  file.pxd  file.pyx  socket.pxd  socket.pyx  statx.pxd  statx.pyx
src/shakti/lib/: error.pxd  error.pyx  path.pxd  path.pyx  time.pxd
src/shakti/os/: mk.pyx  mkdir.pyx  os.pyx  random.pxd  random.pyx  remove.pyx  rename.pyx  time.pxd  time.pyx
test/: conftest.py
test/core/: asyncbase_test.py
test/event/: entry_test.py  run_test.py  sleep_test.py  sqe_test.py  task_test.py  time_test.py
test/io/: common_test.py  file_test.py  socket_test.py  statx_test.py
test/lib/: error_test.py  path_test.py
test/os/: mk_test.py  mkdir_test.py  random_test.py  remove_test.py  rename_test.py  time_test.py
